# ocr-redact

./: .gitignore  Cargo.toml  README.md  download-model.sh
src/: main.rs
